--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ aiohttp = "^3.8.3"
 black = "^22.6.0"
 isort = "^5.10.1"
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.1.3"
+pytest-asyncio = "^0.19.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
