--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   devnet-test:
-    image: shardlabs/starknet-devnet:latest
+    image: shardlabs/starknet-devnet:0.3.3
     command: --seed 5
     ports:
       - 5051:5050
