--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "cSpell.words": [
         "apibara",
         "backoff",
+        "coro",
         "devnet",
         "predeployed",
         "STARKNET"
