Feat[indexer]: handle OnboardProposalAdded event
Also, refactor the `from_event` function into `FromEventMixin` to
work with all events, `from_event` take a `StarkNetEvent` instance
deserialize it and return a dataclass instance representing that event,
it uses the type hints to know how to deserialize each value

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "apibara",
         "backoff",
         "coro",
+        "deserializers",
         "devnet",
         "predeployed",
         "STARKNET"
