Refactor: move event handling logic to event classes and test SwapAdded event

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
         "deserializers",
         "devnet",
         "predeployed",
+        "pymongo",
         "STARKNET"
+    ],
+    "python.linting.pylintArgs": [
+        "--disable=invalid-name"
     ]
 }
