--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ isort = "^5.10.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
