--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ isort = "^5.10.1"
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19.0"
 pytest-cov = "^4.0.0"
+mongomock = "^4.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
