--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
     ],
     "python.linting.pylintArgs": [
         "--disable=invalid-name"
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black"
 }
