Refactor: handle all pylint messages
Jira: PVD-82

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     ],
     "python.linting.pylintArgs": [
         "--disable=invalid-name"
+    ],
+    "black-formatter.args": [
+        "--preview"
     ]
 }
