--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   rev: 22.10.0
   hooks:
   - id: black
+    args: [--preview]
 
 - repo: https://github.com/PyCQA/isort
   rev: 5.10.1
@@ -31,3 +32,12 @@ repos:
     - id: flake8
       args: [--ignore, "E501,W503"]
       additional_dependencies: [flake8-bugbear==22.10.27]
+
+- repo: local
+  hooks:
+  - id: pylint
+    name: pylint
+    entry: pylint
+    language: system
+    types: [python]
+    args: ["--disable", "missing-docstring,fixme,invalid-name,inconsistent-return-statements"]
