Feat: handle MemberUpdated event (#1)
Jira: PVD-81, PVD-90

Co-authored-by: fatalyty <alexandre.kahn@quadratic-labs.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "python.linting.pylintArgs": [
         "--disable=invalid-name"
     ],
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black",
     "black-formatter.args": [
         "--preview"
     ]
