Refactor: major reorganization of the code base
- Split the code into more fine grained packages and modules
- Rename packages/modules for better understandability

Jira: PVD-166

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,4 +40,4 @@ repos:
     entry: pylint
     language: system
     types: [python]
-    args: ["--disable", "missing-docstring,fixme,invalid-name,inconsistent-return-statements"]
+    args: ["--disable", "missing-docstring,fixme,invalid-name,inconsistent-return-statements", "--min-public-methods", "0"]
