Feat[graphql]: add totalShares and totalLoot to bank
Jira: PVD-179

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,4 +26,7 @@
     "black-formatter.args": [
         "--preview"
     ],
+    "files.exclude": {
+        "coverage_html_report": true
+    },
 }
