Feat: use dynaconf for config management
Jira: PVD-105

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ asyncio_mode = auto
 log_cli = true
 markers =
     slow: mark tests as slow (skip with '-m "not slow"')
+env =
+    ENV_FOR_DYNACONF=testing
