--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ aiohttp = "^3.8.3"
 websockets = ">6.0.0"
 web3 = ">4.10.0"
 pre-commit = "^2.20.0"
+dynaconf = "^3.1.11"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
@@ -27,6 +28,7 @@ pytest = "^7.1.3"
 pytest-asyncio = "^0.19.0"
 pytest-cov = "^4.0.0"
 mongomock = "^4.1.2"
+pytest-env = "^0.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
